syntax = "proto3";

option csharp_namespace = "GrpcServiceTest";

package beers;

// The greeting service definition.
service Beers {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);

  rpc Get (BeersRequest) returns (BeersReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message BeersRequest {
}

message BeersReply {
	repeated string beers = 1;
}